# test_ci_actions

./: .env example  README.md  db.sqlite3  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: pylint.yml  test.yml
company/: models.py  urls.py  views.py
company/migrations/: 0001_initial.py
company/templates/: index.html  profile.html
main/: settings.py  urls.py
